--- a/blocks/form.css
+++ b/blocks/form.css
@@ -34,6 +34,7 @@
   text-align: center;
   border-radius: 2px;
   border-width: 0;
+  background-color: #000;
 }
 .form__button_type_save:hover {
   cursor: pointer;
