--- a/blocks/text.css
+++ b/blocks/text.css
@@ -61,6 +61,7 @@
     line-height: 37px;
   }
   .text__occu {
+    max-width: 320px;
     font-size: 14px;
     line-height: 16.94px;
   }
